--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3,6 +3,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 @layer base {
     :root {
         --background: 0 0% 100%;
@@ -31,6 +32,7 @@
         --chart-5: 27 87% 67%;
         --radius: 0.5rem;
     }
+
     .dark {
         --background: 0 0% 3.9%;
         --foreground: 0 0% 98%;
@@ -58,11 +60,38 @@
         --chart-5: 340 75% 55%;
     }
 }
+
 @layer base {
     * {
         @apply border-border;
     }
+
     body {
         @apply bg-background text-foreground;
+    }
+}
+
+@layer components {
+    .scrollbar-custom {
+        scrollbar-width: thin;
+        scrollbar-color: #F472B6 #F0F0F0;
+    }
+
+    .scrollbar-custom::-webkit-scrollbar {
+        width: 8px;
+    }
+
+    .scrollbar-custom::-webkit-scrollbar-thumb {
+        background-color: #F472B6;
+        border-radius: 14px;
+    }
+
+    .scrollbar-custom::-webkit-scrollbar-thumb:hover {
+        background-color: #D32F6A;
+    }
+
+    .scrollbar-custom::-webkit-scrollbar-track {
+        background-color: #F0F0F0;
+        border-radius: 10px;
     }
 }
